test_programs/compile_failure/noirc_frontend_tests_errors_if_loop_body_type_is_not_unit/src/main.nr

    unconstrained fn main() {
        loop {
            if false { break; }

            1
        }
    }
    